--- a/server/package.json
+++ b/server/package.json
@@ -4,18 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "dotenv": "^16.0.1",
     "nodemon": "^2.0.19"
   },
   "dependencies": {
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "passport": "^0.6.0"
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
